# sdr

./: .gitignore  pace-sdr-revamp-1.md  pyproject.toml  session-sdr-algorithm-2026-03-26.md
.claude/: CLAUDE.md
algorithm design/: sdr-algo_SDS_methods_spec_v1-03-30.md  sdr-algo_SDS_methods_spec_v2-04-02.md  sdr-algo_world_Athletics_scoring_buckets.md  sdr-algo_world_athletics_scoring_curves_800m_10k.html  sdr-composite_spec_addendum_v1-04-02.md  sdr_algo_altititude-conv_normalization_spec_v1.md
apps/web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  (+1 more)
docs/: sdr-gaps-brainstorm-2026-04-07.md  sdr-implementation-guide.md  sdr-supabase-setup-frontend-wrapper.md
docs/meets/: index.html
py/: .env.example  __main__.py  cli.py  config.py  conftest.py  db.py  requirements.txt
py/constants/: events.py  ksa_reference.py  tiers.py  wa_scoring.py
py/models/: athlete.py  race.py  sdr.py
py/passes/: pass2_normalize.py  pass3_profile.py  pass4_sds.py  pass5_composite.py
py/scripts/: fit_altitude_model.py
py/tests/: test_field_mapping.py  test_pass2_normalize.py  test_pass3_profile.py  test_pass4_sds.py  test_pass5_composite.py  test_time_convert.py  test_wa_calculator.py
py/utils/: altitude.py  field_mapping.py  time_convert.py  wa_calculator.py
supabase/migrations/: 001_sdr_venues.sql  002_sdr_venue_seed.sql  003_sdr_normalization_fields.sql  004_sdr_athlete_profile.sql  005_sdr_race_scores.sql  006_sdr_altitude_estimates.sql  007_meets.sql  008_meets_backfill.sql  009_meets_new_fields.sql
(+31 files in other folders)
